--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -5,4 +5,7 @@ authors = ["glendc <glen.decauwsemaecker@otainsight.com>"]
 edition = "2018"
 
 [dependencies]
+log = "0.4.14"
+env_logger = "0.8.3"
 clap = "3.0.0-beta.2"
+ctrlc = "3.1.9"
