fix build step for webservice
build step will have to be done per binary,
for now there is only one

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build WebService
+      run: cargo build --verbose
+      working-directory: webservice
