--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,4 +20,4 @@ jobs:
       run: cargo test --verbose
     - name: Build WebService
       run: cargo build --verbose
-      working-directory: webservice
+      working-directory: ./webservice
