--- a/webservice/Cargo.toml
+++ b/webservice/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["glendc <glen.decauwsemaecker@otainsight.com>"]
 edition = "2018"
 
+[[bin]]
+name = "webservice"
+path = "src/bin/main.rs"
+
 [dependencies]
 log = "0.4.14"
 env_logger = "0.8.3"
